--enable-preview for main lookup